fixato cropper img

--- a/BACK-END/airbdba/public/stylesheets/profile.css
+++ b/BACK-END/airbdba/public/stylesheets/profile.css
@@ -108,6 +108,7 @@
   flex: 1;
   display: flex;
   justify-content: center;
+  margin-top: 30px;
 }
 
 form {
@@ -132,12 +133,13 @@ form {
   text-align: center;
 }
 
-.btn:not(:last-child) {
+a.btn:not(:last-child) {
   margin-bottom: 20px;
 }
 
 #buttons-header {
   flex: 1;
+  margin-top: 60px;
   display: flex;
   justify-content: center;
 }
@@ -147,7 +149,11 @@ form {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
-  align-items: center;
+  margin: 0 100px;
+}
+
+#buttons > a:not(:last-child) {
+  margin-bottom: 50px;
 }
 
 #footer {
@@ -188,6 +194,19 @@ form {
   margin-bottom: 20px;
 }
 
+.modal-dialog {
+  min-width: 300px;
+  min-height: 300px;
+}
+
+.cropper-container {
+  display: flex;
+  justify-content: center;
+}
+
+.cropper-container {
+  width: 100%;
+}
 /* ----------------- */
 
 /* PASS COLOR SCHEMES */
@@ -228,6 +247,16 @@ form {
 @media (max-width: 768px) {
   .side {
     display: none;
+  }
+  #profile-header {
+    margin: 0;
+  }
+  #buttons-header {
+    margin: 0;
+    margin-bottom: 20px;
+  }
+  #buttons {
+    margin: 0;
   }
 }
 
